$NetBSD: CHANGES-2013,v 1.769 2013/03/05 00:08:21 khorben Exp $

Changes to the packages collection and infrastructure in 2013:

	Updated textproc/mdoclint to 1.18 [jnemeth 2013-01-01]
	Updated graphics/blender to 2.65a [ryoon 2013-01-02]
	Updated graphics/fotoxx to 13.01 [ryoon 2013-01-02]
	Updated net/aria2 to 1.16.1 [ryoon 2013-01-02]
	Updated comms/asterisk to 11.1.1 [jnemeth 2013-01-03]
	Updated comms/asterisk to 10.11.1 [jnemeth 2013-01-03]
	Updated comms/asterisk to 1.8.19.1 [jnemeth 2013-01-03]
	mk/bsd.pkg.mk: freeze ended for pkgsrc-2012Q4 branch [agc 2013-01-03]
	Updated mail/milter-greylist to 4.4.1 [tron 2013-01-03]
	Updated www/py-django-mptt to 0.5.5 [adam 2013-01-03]
	Updated lang/perl5 to 5.16.2nb2 [dholland 2013-01-03]
	Updated pkgtools/digest to 20121220 [dholland 2013-01-03]
	Added print/electrix version 0.2.0 [ryoon 2013-01-03]
	Added print/qpdfview version 0.3.7 [ryoon 2013-01-03]
	Updated graphics/fotoxx to 13.01 [ryoon 2013-01-03]
	Added www/php-piwigo version 2.4.6 [ryoon 2013-01-03]
	Updated www/jetty7 to 7.6.8.20121106 [ryoon 2013-01-03]
	Updated databases/py-postgresql to 4.1 [darcy 2013-01-03]
	Added www/php-tt-rss version 1.6.2 [ryoon 2013-01-03]
	Added www/py-bleach version 1.1.5 [ryoon 2013-01-03]
	Added www/py-django-mezzanine-grappelli version 0.2.11 [ryoon 2013-01-03]
	Added www/py-django-mezzanine-filebrowser version 0.2.13 [ryoon 2013-01-03]
	Added devel/py-flakes version 0.5.0nb1 [ryoon 2013-01-03]
	Added devel/py-pep8 version 1.3.4 [ryoon 2013-01-03]
	Added www/py-mezzanine version 1.2.4 [ryoon 2013-01-03]
	Updated lang/clang to 3.2 [adam 2013-01-03]
	Added www/py-django-appconf version 0.5 [ryoon 2013-01-03]
	Updated shells/zsh to 5.0.2 [ryoon 2013-01-03]
	Updated misc/vym to 2.2.4 [ryoon 2013-01-03]
	Added net/py-smb version 1.1.2 [ryoon 2013-01-03]
	Added devel/open-vcdiff version 0.8.3 [agc 2013-01-03]
	Updated www/py-moin to 1.9.6 [gls 2013-01-03]
	Updated databases/sqlite3 to 3.7.15.1 [adam 2013-01-03]