@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.8 2012/10/18 14:34:06 taca Exp $
+@comment $NetBSD: PLIST,v 1.9 2012/11/08 13:50:48 taca Exp $
 ${EGDIR}/localconf.php
 ${TYPO3DIR}/${TYPO3NAME}/ChangeLog
 ${TYPO3DIR}/${TYPO3NAME}/GPL.txt
@@ -1727,7 +1727,6 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/insert3.gif
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/insert4.gif
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/insert5.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/installbackground.jpg
-${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/installlogo.gif
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/legend.gif
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/lightning.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/lightning_green.png
@@ -2301,7 +2300,6 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/res/t3grid-tabledown.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/res/t3grid-tableleft.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/res/t3grid-tableright.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/res/t3grid-tableup.png
-${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/res/typo3.pageModule.js
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/wizard_backend_layout.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/wizard_backend_layout.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/locallang_csh_webinfo.xlf
@@ -3260,6 +3258,7 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/MVC/Web/RequestTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/MVC/Web/Routing/UriBuilderTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Object/Container/ClassInfoFactoryTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Object/Container/ContainerTest.php
+${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Object/Container/Fixtures/NamespaceTestclasses.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Object/Container/Fixtures/Testclasses.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Persistence/Mapper/DataMapFactoryTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Persistence/ObjectStorageTest.php
@@ -3503,6 +3502,7 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Classes/ViewHelpers/Widget/LinkViewH
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Classes/ViewHelpers/Widget/PaginateViewHelper.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Classes/ViewHelpers/Widget/UriViewHelper.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Configuration/TypoScript/setup.txt
+${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Resources/Private/Language/locallang.xml
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Resources/Private/Templates/ViewHelpers/Widget/Autocomplete/Index.html
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Resources/Private/Templates/ViewHelpers/Widget/Paginate/Index.html
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Tests/Unit/Core/Fixtures/TestViewHelper.php
@@ -4551,6 +4551,7 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/FileStor
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/HMAC.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/Interface.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/KVForm.php
+${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/MDB2Store.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/MemcachedStore.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/Message.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/MySQLStore.php
