@@ -1,4 +1,4 @@
-@comment $NetBSD: PLIST,v 1.4 2012/10/18 14:35:05 taca Exp $
+@comment $NetBSD: PLIST,v 1.5 2012/11/08 13:52:28 taca Exp $
 ${EGDIR}/localconf.php
 ${TYPO3DIR}/${TYPO3NAME}/ChangeLog
 ${TYPO3DIR}/${TYPO3NAME}/GPL.txt
@@ -1860,7 +1860,6 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/insert3.gif
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/insert4.gif
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/insert5.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/installbackground.jpg
-${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/installlogo.gif
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/legend.gif
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/lightning.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/gfx/lightning_green.png
@@ -2442,7 +2441,6 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/res/t3grid-tabledown.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/res/t3grid-tableleft.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/res/t3grid-tableright.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/res/t3grid-tableup.png
-${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/res/typo3.pageModule.js
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/wizard_backend_layout.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/layout/wizard_backend_layout.png
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/cms/locallang_csh_webinfo.xlf
@@ -3414,6 +3412,7 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Object/Container/Contai
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Object/Container/Fixtures/NamespaceTestclasses.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Object/Container/Fixtures/Testclasses.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Persistence/Mapper/DataMapFactoryTest.php
+${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Persistence/Mapper/DataMapperTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Persistence/ObjectStorageTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Persistence/QueryResultTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Persistence/QueryTest.php
@@ -3442,6 +3441,7 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Service/FlexFormService
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Service/TypeHandlingServiceTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Service/TypoScriptServiceTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/SignalSlot/DispatcherTest.php
+${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Utility/DebuggerTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Utility/ExtensionTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Utility/LocalizationTest.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/extbase/Tests/Unit/Validation/Validator/AbstractValidatorTestcase.php
@@ -3656,6 +3656,7 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Classes/ViewHelpers/Widget/LinkViewH
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Classes/ViewHelpers/Widget/PaginateViewHelper.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Classes/ViewHelpers/Widget/UriViewHelper.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Configuration/TypoScript/setup.txt
+${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Resources/Private/Language/locallang.xml
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Resources/Private/Templates/ViewHelpers/Widget/Autocomplete/Index.html
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Resources/Private/Templates/ViewHelpers/Widget/Paginate/Index.html
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/fluid/Tests/Unit/Core/Fixtures/TestViewHelper.php
@@ -4746,6 +4747,7 @@ ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/FileStor
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/HMAC.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/Interface.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/KVForm.php
+${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/MDB2Store.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/MemcachedStore.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/Message.php
 ${TYPO3DIR}/${TYPO3NAME}/typo3/sysext/openid/lib/php-openid/Auth/OpenID/MySQLStore.php
